introduce category to prioritize important messages
